Fix for images on smaller screens

--- a/public/assets/css/components/_image.scss
+++ b/public/assets/css/components/_image.scss
@@ -62,3 +62,10 @@
     }
   }
 }
+
+@include breakpoint(small) {
+  #main .inner .content img {
+    max-width: 100%;
+    width: 100%;
+  }
+}
